--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ pagination:
 ---
 
 <div class="header-bar">
-  <h1>*folio</h1>
-  <h2>simple whitespace theme</h2>
+  <h1>Tom Paradise</h1>
+  <h2>portfolio of work</h2>
   <br/>
   <hr>
   <br/>
