--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ pagination:
 
 <div class="header-bar">
   <h1>Tom Paradise</h1>
-  <h2>Portfolio</h2>
+  <h2>Making games with C++, C#, Unity, UE4, & DX11/12</h2>
   <br/>
   <hr>
   <br/>
