--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ pagination:
 
 <div class="header-bar">
   <h1>Tom Paradise</h1>
-  <h2>Game programmer & creative problem-solver</h2>
+  <h2>Game developer & programmer</h2>
   <br/>
   <hr>
   <br/>
